--- a/drums.css
+++ b/drums.css
@@ -1,6 +1,32 @@
+@import url('https://fonts.googleapis.com/css?family=Nunito:600');
+body{
+    background-color: #ffb199;
+}
 #drums {
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 5%;
+}
+#buttons{
+    position: absolute;
+    margin-top: 7%;
+    margin-left: 3%;
+    list-style: none;
+    color: #332269;
+    font-family: 'Nunito', sans-serif;
+    font-size: 35px;
+
+}
+.enlarge{
+    animation: textChange .5s;
+}
+
+@keyframes textChange{
+    50%{
+        font-size: 70px;
+    }
+    100%{
+        font-size: 35px;
+    }
 }
